Labeled 'v2.332' 10/1/04 Assignments: * fixed error in comparing assignments of different length * slight optimization in comparing assignments
Partial Counts
* fixed partial count scheme
* added hotspots

BestFeatures:
* fixed error in ordering of assignments
* big fix: the FeatureSet might contain redundant seeds.
  before output, a clean set is created, that does not contain redundancies

--- a/trunk/engine/vc.net/Persistance.vcproj
+++ b/trunk/engine/vc.net/Persistance.vcproj
@@ -217,6 +217,9 @@
 				RelativePath="..\..\seedsearcher\Persistance\StreamBuffer.h">
 			</File>
 			<File
+				RelativePath="..\persistance\StrInputStream.h">
+			</File>
+			<File
 				RelativePath="..\..\seedsearcher\Persistance\StrOutputStream.h">
 			</File>
 			<File
