--- a/trunk/engine/vc.net/UnitTests.vcproj
+++ b/trunk/engine/vc.net/UnitTests.vcproj
@@ -4,6 +4,10 @@
 	Version="7.10"
 	Name="UnitTests"
 	ProjectGUID="{E9BDC8BD-E4FD-4CD2-B855-9C997E13DEB5}"
+	SccProjectName="&quot;$/SeedSearcher.2332&quot;, RLDAAAAA"
+	SccAuxPath=""
+	SccLocalPath=".."
+	SccProvider="MSSCCI:Microsoft Visual SourceSafe"
 	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
@@ -76,7 +80,12 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				StringPooling="TRUE"
+				BasicRuntimeChecks="3"
 				RuntimeLibrary="4"
+				BufferSecurityCheck="FALSE"
+				ForceConformanceInForLoopScope="TRUE"
+				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
