Labeled 'v2.4' 13/5/05 * search for any length motif on any preprocessor * allow/disallow wildcards in outer positions - for known motif search * fixed TSS output - it now prints upstream offset * genes names up to 200 characters long!

--- a/trunk/engine/quick.conf
+++ b/trunk/engine/quick.conf
@@ -11,7 +11,15 @@ Packages/Seed/ALL/Init/Args = --Sproj-n 30 --Sseed-n 20 --Sprep-l 10 --Spssm=off
 
 #$include "nimble.conf"
 
-
+Packages/Seed/ALL/Runs/L10D2M2/Args = --Sseed-l 10 --Sproj-d 2 --Sproj-mid 2
+Packages/Seed/ALL/Runs/L10D2M2/ResetArgs = off
+Packages/Seed/ALL/Runs/L10D2M2/ResetSeeds = off
+Packages/Seed/ALL/Runs/L10D1M3/Args = --Sproj-d 2 --Sproj-mid 3
+Packages/Seed/ALL/Runs/L10D1M3/ResetArgs = off
+Packages/Seed/ALL/Runs/L10D1M3/ResetSeeds = off
+Packages/Seed/ALL/Runs/L10D0M2/Args = --Sproj-d 0 --Sproj-mid 2
+Packages/Seed/ALL/Runs/L10D0M2/ResetArgs = off
+Packages/Seed/ALL/Runs/L10D0M2/ResetSeeds = off
 
 Packages/Seed/ALL/Runs/L10D2/Args = --Sseed-l 10 --Sproj-d 2
 Packages/Seed/ALL/Runs/L10D2/ResetArgs = off
