completed sync with berlios repository

--- a/trunk/gui/src/SNAP.csproj
+++ b/trunk/gui/src/SNAP.csproj
@@ -9,6 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SNAP</RootNamespace>
     <AssemblyName>SNAP</AssemblyName>
+    <SccProjectName>gui/src</SccProjectName>
+    <SccLocalPath>.</SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>MSSCCI:PushOk SVN Proxy</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
