--- a/trunk/gui/Core/SNAP.Core.csproj
+++ b/trunk/gui/Core/SNAP.Core.csproj
@@ -34,11 +34,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calc.cs" />
+    <Compile Include="Controller.cs" />
     <Compile Include="Jobs.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.cs" />
-    <Compile Include="Util.cs" />
     <Compile Include="XMLResourceType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
