files can also be compiled under VS 2005 C++/CLI

--- a/trunk/engine/src/vc.net/Persistance.vs8.vcproj
+++ b/trunk/engine/src/vc.net/Persistance.vs8.vcproj
@@ -395,6 +395,10 @@
 				RelativePath="..\persistance\TFactory.h"
 				>
 			</File>
+			<File
+				RelativePath="..\persistance\xmlwriter.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
